force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/BDL_Deal_Risk_Assessment__c.object-meta.xml
<CustomObject>
    <description>This object is being used for recording risk assessments for potential deals. 
Demen S. April 6th 2023.</description>
    <label>Deal Risk Assessment</label>
    <nameField>
        <displayFormat>DRA-{00000}</displayFormat>
        <label>Deal Risk Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Risk Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>