force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>BDL_Assessment_Type__c</fullName>
    <description>Type of Assessment.
Demen S. 6th April 2023.</description>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Selection</fullName>
            </value>
            <value>
                <fullName>Supply Point Evaluation</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>