force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>BDL_Mitigation_Plan__c</fullName>
    <description>What&apos;s the plan to mitigate the risk.
Demen S. 6th April 2023.</description>
    <label>Mitigation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>