force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BDL_Opportunity__c</fullName>
    <description>The Opportunity/Deal to be assessed by the various team members.
Demen S. 6th April 2023.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Risk Assessments</relationshipLabel>
    <relationshipName>Deal_Risk_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>