force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Risk__c.field-meta.xml
<CustomField>
    <fullName>BDL_Risk__c</fullName>
    <description>Risk Impact.
Demen S. 6th April 2023.</description>
    <label>Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>