force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>BDL_Risk_Description__c</fullName>
    <description>Brief description of anticipated risks.
Demen S. 6th April 2023.</description>
    <label>Risk Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>