force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Risk_Status__c</fullName>
    <description>Formula to display traffic light icons based on risk impact.
Demen S. 6th April 2023.</description>
    <formula>IMAGE(
CASE(BDL_Risk__c,
&quot;Low&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;High&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Status</label>
    <type>Text</type>
</CustomField>