force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Role__c.field-meta.xml
<CustomField>
    <fullName>BDL_Role__c</fullName>
    <description>Role of the assessment taker.
Demen S. 6th April 2023.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Therapeutics Area VP</fullName>
            </value>
            <value>
                <fullName>Alliances Partner</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Commercials / Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>