force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/fields/BDL_Summary__c.field-meta.xml
<CustomField>
    <fullName>BDL_Summary__c</fullName>
    <description>Summary of the risk assessment.
Demen S. 6th April 2023.</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>