force-app/main/default/objects/BDL_Deal_Risk_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BDL_Risk_Status__c</columns>
    <columns>BDL_Role__c</columns>
    <columns>BDL_Assessment_Type__c</columns>
    <columns>BDL_Opportunity__c</columns>
    <columns>BDL_Risk_Description__c</columns>
    <columns>BDL_Mitigation_Plan__c</columns>
    <columns>BDL_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>